panorama: fix overlapping background in chrome

--- a/plugins/plugins-available/panorama/root/panorama-2.02-1.css
+++ b/plugins/plugins-available/panorama/root/panorama-2.02-1.css
@@ -12,8 +12,8 @@
 .BG_UNREACHABLE  { background: #FFC0C0 !important; }
 .BG_DOWN         { background: #FFC0C0 !important; }
 
-HTML {
-  background: white;
+HTML, BODY {
+  background: white !important;
 }
 
 .x-viewport {
@@ -22,8 +22,12 @@ HTML {
 .x-viewport.geomap {
     overflow: hidden;
 }
+.x-panel-body-default {
+  background: transparent;
+}
 #tabpan {
     position: fixed !important;
+    z-index: 2001 !important;
 }
 #maintabbar {
     z-index: 1000000;
